Переписана работа с файлами текстов на файловую систему + добавлен CRUD для авторов